[package]
name = "frankenengine-node"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false
autobins = false

[[bin]]
name = "franken-node"
path = "src/main.rs"
test = false

[[bin]]
name = "test-engine"
path = "src/bin/test_engine.rs"
test = false
required-features = ["test-support"]

[[bin]]
name = "bd-21fo-governor-conformance"
path = "src/bin/bd_21fo_governor_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-20uo-proof-carrying-decode-conformance"
path = "src/bin/bd_20uo_proof_carrying_decode_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-w0jq-degraded-mode-audit-conformance"
path = "src/bin/bd_w0jq_degraded_mode_audit_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-1xwz-perf-budget-guard-conformance"
path = "src/bin/bd_1xwz_perf_budget_guard_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-1nfu-remote-capability-gate-conformance"
path = "src/bin/bd_1nfu_remote_capability_gate_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-3a3q-guardrail-monitor-conformance"
path = "src/bin/bd_3a3q_guardrail_monitor_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-tg2-fleet-quarantine-conformance"
path = "src/bin/bd_tg2_fleet_quarantine_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "bd-137-policy-compatibility-gate-conformance"
path = "src/bin/bd_137_policy_compatibility_gate_conformance.rs"
test = false
required-features = ["advanced-features"]

[[bin]]
name = "collect-production-metrics"
path = "src/bin/collect_production_metrics.rs"
test = false

[[bin]]
name = "vef-degraded-mode-metamorphic"
path = "tests/vef_degraded_mode_metamorphic.rs"
test = false

[lib]
path = "src/lib.rs"
test = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(franken_node_inline_tests)'] }

[features]
asupersync-transport = ["dep:asupersync"]

# Legacy feature for backward compatibility - includes all new features
extended-surfaces = [
    "control-plane",
    "policy-engine",
    "remote-ops",
    "admin-tools",
    "verifier-tools",
    "advanced-features"
]

# Granular feature split
control-plane = ["policy-engine"]      # API middleware, fleet operations, control plane functionality
policy-engine = []      # Security policies, guardrail monitors, hardening state machines
remote-ops = []         # Remote operations, distributed coordination, eviction sagas
admin-tools = []        # Enterprise governance, migration tools, administrative functionality
verifier-tools = ["control-plane"]     # Verifier-specific tooling, economy, SDK
advanced-features = ["verifier-tools"]  # Claims, conformance, encoding, extensions, federation, perf, repair

test-support = ["control-plane", "admin-tools"]
# Compile library-level `#[cfg(loom)]` model helpers for explicit loom test
# invocations. This is intentionally not part of default or test-support builds.
loom-models = ["dep:loom"]
# Heavy compilation dependencies - optional for fuzz builds
http-client = ["dep:ureq", "dep:url"]
external-commands = ["dep:which", "dep:ctrlc"]
compression = ["dep:flate2"]
cbor-serialization = ["dep:ciborium"]
engine = ["dep:frankenengine-engine", "dep:frankenengine-extension-host"]
blake3 = ["dep:blake3"]
# bd-98xo5.12.1: opt-in profiling feature pulling in the hdrhistogram
# dependency for per-hot-path latency histograms. Production builds
# (`cargo build` with default features) DO NOT compile this code path —
# the #[cfg(feature = "profiling")] gate elides it entirely. Enable
# explicitly with `cargo build --features profiling` when running
# under a perf-round measurement skill.
profiling = ["dep:hdrhistogram"]
# Default stays limited to features needed for a usable node binary.
# Heavy product surfaces and optional export formats require explicit opt-in.
default = ["engine", "http-client", "external-commands"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono = { version = "0.4.40", features = ["serde", "clock"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
sha2 = "0.11.0"
hmac = "0.13.0"
hkdf = "0.13.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
hex = "0.4.3"
base64 = "0.22.1"
franken-security-macros = { path = "../franken-security-macros" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
ciborium = { version = "0.2.2", optional = true }
flate2 = { version = "1.0.35", optional = true }
rand = "0.8.5"
asupersync = { version = "0.3.4", optional = true }
# bd-98xo5.12.1: HDR histogram for the `profiling` feature. Optional
# so default builds pay zero binary cost.
hdrhistogram = { version = "7.5", default-features = false, optional = true }
frankentui.workspace = true
fs2 = "0.4.3"
frankenengine-engine = { path = "../../../franken_engine/crates/franken-engine", optional = true }
frankenengine-extension-host = { path = "../../../franken_engine/crates/franken-extension-host", optional = true }
tracing = { workspace = true }
subtle = "2.6.1"
tempfile = "3.15"
arbitrary = { version = "1.3", features = ["derive"] }
proptest = "1.6"
# Heavy compilation dependencies made optional for faster fuzz builds
ureq = { version = "3", optional = true }
url = { version = "2.5", optional = true }
which = { version = "8.0.2", optional = true }
ctrlc = { version = "3", optional = true, features = ["termination"] }
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
blake3 = { version = "1.5", optional = true }
lazy_static = "1.5.0"
loom = { version = "0.7", optional = true }

# Windows: AF_UNIX socket support for the telemetry bridge (Unix uses std's
# os::unix::net). uds_windows mirrors std's UnixListener/UnixStream API.
[target.'cfg(windows)'.dependencies]
uds_windows = "1"

[dev-dependencies]
assert_cmd = "2.0.16"
assert2 = "0.4.0"
fsqlite = { path = "../../../frankensqlite/crates/fsqlite", default-features = false, features = ["native"] }
frankenengine-verifier-sdk = { path = "../../sdk/verifier" }
fastapi_rust = { package = "fastapi-rust", path = "/dp/fastapi_rust/crates/fastapi", default-features = false }
tokio = { workspace = true, features = ["sync", "time"] }
regex = "1.11.1"
sqlmodel = { path = "/dp/sqlmodel_rust/crates/sqlmodel", default-features = false }
sqlmodel-core = { path = "/dp/sqlmodel_rust/crates/sqlmodel-core" }
sqlmodel-schema = { path = "/dp/sqlmodel_rust/crates/sqlmodel-schema" }
syn = { version = "2.0", features = ["full"] }
tracing-subscriber = { workspace = true }
insta = { version = "1.40", features = ["json", "filters", "redactions"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "migrate_cli_e2e"
path = "tests/migrate_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "verifier_economy_conformance"
path = "tests/verifier_economy_conformance.rs"
required-features = ["verifier-tools", "test-support"]

# bd-17ds.5.5 / bd-17ds.5.5.1: Security -> Verifier Economy integration
[[test]]
name = "security_economy_integration"
path = "../../tests/integration/security_economy_integration.rs"
required-features = ["verifier-tools", "test-support"]

[[test]]
name = "incident_cli_e2e"
path = "tests/incident_cli_e2e.rs"

[[test]]
name = "run_console_exit_e2e"
path = "tests/run_console_exit_e2e.rs"

[[test]]
name = "replay_fidelity_oracle"
path = "tests/replay_fidelity_oracle.rs"

[[test]]
name = "counterfactual_policy_matrix"
path = "tests/counterfactual_policy_matrix.rs"

[[test]]
name = "rch_adapter_classification"
path = "tests/rch_adapter_classification.rs"

[[test]]
name = "validation_broker"
path = "tests/validation_broker.rs"

[[test]]
name = "validation_closeout"
path = "tests/validation_closeout.rs"

[[test]]
name = "evidence_index"
path = "tests/evidence_index.rs"

[[test]]
name = "closed_bead_compliance"
path = "tests/closed_bead_compliance.rs"

[[test]]
name = "operator_transcripts"
path = "tests/operator_transcripts.rs"

[[test]]
name = "swarm_bead_templates"
path = "tests/swarm_bead_templates.rs"

[[test]]
name = "swarm_validation_admission"
path = "tests/swarm_validation_admission.rs"

[[test]]
name = "validation_planner"
path = "tests/validation_planner.rs"

[[test]]
name = "validation_proof_cache"
path = "tests/validation_proof_cache.rs"

[[test]]
name = "validation_proof_coalescer"
path = "tests/validation_proof_coalescer.rs"

[[test]]
name = "validation_proof_debt_ledger"
path = "tests/validation_proof_debt_ledger.rs"

[[test]]
name = "validation_readiness"
path = "tests/validation_readiness.rs"

[[test]]
name = "signed_lineage_graph_builder"
path = "../../tests/security/signed_lineage_graph_builder.rs"

[[test]]
name = "dgis_immunization_planner"
path = "../../tests/security/dgis_immunization_planner.rs"

[[test]]
name = "swarm_handoff_evidence"
path = "tests/swarm_handoff_evidence.rs"

[[test]]
name = "cli_arg_validation"
path = "tests/cli_arg_validation.rs"

[[test]]
name = "init_bootstrap_smoke"
path = "tests/init_bootstrap_smoke.rs"

[[test]]
name = "replay_import_anchor"
path = "tests/replay_import_anchor.rs"

[[test]]
name = "remotecap_cli_e2e"
path = "tests/remotecap_cli_e2e.rs"

[[test]]
name = "remotecap_cli_wire_conformance"
path = "tests/remotecap_cli_wire_conformance.rs"

[[test]]
name = "remote_cap_enforcement"
path = "tests/remote_cap_enforcement.rs"

[[test]]
name = "remote_capability_gate_fuzz_regression"
path = "tests/remote_capability_gate_fuzz_regression.rs"

[[test]]
name = "remote_cap_scope_tightening_conformance"
path = "tests/remote_cap_scope_tightening_conformance.rs"

[[test]]
name = "remote_cap_jcq1z_real_enforcement"
path = "tests/remote_cap_jcq1z_real_enforcement.rs"
required-features = ["remote-ops"]

[[test]]
name = "remote_cap_replay_token_set_loom"
path = "tests/remote_cap_replay_token_set_loom.rs"

[[test]]
name = "auth_failure_limiter_loom"
path = "tests/auth_failure_limiter_loom.rs"
required-features = ["control-plane"]

[[test]]
name = "auth_failure_limiter_per_source_isolation"
path = "tests/auth_failure_limiter_per_source_isolation.rs"
required-features = ["control-plane"]

[[test]]
name = "operator_process_start_initialization_loom"
path = "tests/operator_process_start_initialization_loom.rs"
required-features = ["control-plane"]

[[test]]
name = "evidence_ledger_append_ordering_loom"
path = "tests/evidence_ledger_append_ordering_loom.rs"

[[test]]
name = "isolation_rail_router"
path = "tests/isolation_rail_router.rs"

[[test]]
name = "remote_virtual_transport_faults_regressions"
path = "tests/remote_virtual_transport_faults_regressions.rs"

[[test]]
name = "remote_bulkhead_under_load"
path = "../../tests/perf/remote_bulkhead_under_load.rs"
required-features = ["remote-ops"]

[[test]]
name = "connector_interop_suite_revocation"
path = "tests/connector_interop_suite_revocation.rs"
required-features = ["control-plane"]

[[test]]
name = "connector_lifecycle_public_api_e2e"
path = "tests/connector_lifecycle_public_api_e2e.rs"
required-features = ["control-plane"]

[[test]]
name = "connector_jcq1z_lifecycle_stress"
path = "tests/connector_jcq1z_lifecycle_stress.rs"
required-features = ["control-plane"]

[[test]]
name = "connector_lifecycle_transitions"
path = "../../tests/conformance/connector_lifecycle_transitions.rs"

[[test]]
name = "lease_coordinator_selection"
path = "../../tests/conformance/lease_coordinator_selection.rs"
required-features = ["control-plane"]

[[test]]
name = "connector_runtime_integration"
path = "../../tests/integration/connector_runtime_integration.rs"

[[test]]
name = "cross_module_integration_index"
path = "../../tests/integration/cross_module_integration_index.rs"

[[test]]
name = "connector_method_contract_artifact_conformance"
path = "tests/connector_method_contract_artifact_conformance.rs"

[[test]]
name = "connector_protocol_harness"
path = "../../tests/conformance/connector_protocol_harness.rs"
required-features = ["advanced-features"]

[[test]]
name = "atc_verifier_api_routes"
path = "tests/atc_verifier_api_routes.rs"
required-features = ["control-plane"]

[[test]]
name = "fleet_cli_e2e"
path = "tests/fleet_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_decision_contract_harness"
path = "tests/fleet_decision_contract_harness.rs"
required-features = ["control-plane"]

[[test]]
name = "frankentui_surface_migration"
path = "tests/frankentui_surface_migration.rs"

[[test]]
name = "frankentui_operator_surface_integration"
path = "tests/frankentui_operator_surface_integration.rs"

[[test]]
name = "asupersync_control_lane_integration"
path = "tests/asupersync_control_lane_integration.rs"
required-features = ["asupersync-transport"]

[[test]]
name = "verifier_sdk_capsule_replay"
path = "../../tests/conformance/verifier_sdk_capsule_replay.rs"

[[test]]
name = "verifier_session_monotonic"
path = "../../tests/conformance/verifier_session_monotonic.rs"

[[test]]
name = "sdk_verifier_public_api_fuzz_harness"
path = "tests/sdk_verifier_public_api_fuzz_harness.rs"

[[test]]
name = "traceparent_parser_fuzz_harness"
path = "tests/traceparent_parser_fuzz_harness.rs"
required-features = ["control-plane"]

[[test]]
name = "sdk_verifier_public_api_golden_conformance"
path = "tests/sdk_verifier_public_api_golden_conformance.rs"

[[test]]
name = "sdk_verifier_replay_bundle_frame_conformance"
path = "tests/sdk_verifier_replay_bundle_frame_conformance.rs"

[[test]]
name = "evidence_verification_spine_contract"
path = "tests/evidence_verification_spine_contract.rs"
required-features = ["control-plane"]

[[test]]
name = "idempotency_key_derivation"
path = "../../tests/conformance/idempotency_key_derivation.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "remote_idempotency_store_conformance"
path = "tests/remote_idempotency_store_conformance.rs"
required-features = ["remote-ops"]

[[test]]
name = "isolation_rail_router_conformance"
path = "../../tests/conformance/isolation_rail_router_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "performance_hardening_metrics_conformance"
path = "../../tests/conformance/performance_hardening_metrics_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "vef_perf_budget_gate_conformance"
path = "../../tests/conformance/vef_perf_budget_gate_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "rollback_bundle_conformance"
path = "../../tests/conformance/rollback_bundle_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_b9b6_durability_violation_conformance"
path = "../../tests/conformance/bd_b9b6_durability_violation_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_bq4p_controller_boundary_checks_conformance"
path = "../../tests/conformance/bd_bq4p_controller_boundary_checks_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_3v9p_deterministic_seed_encoding_conformance"
path = "../../tests/conformance/bd_3v9p_deterministic_seed_encoding_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_5k7w_sybil_defense_conformance"
path = "../../tests/conformance/bd_5k7w_sybil_defense_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "fastapi_rust_control_plane_integration"
path = "tests/fastapi_rust_control_plane_integration.rs"
required-features = ["test-support"]

[[test]]
name = "extension_artifact_contract_conformance"
path = "tests/extension_artifact_contract_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "audience_token_multi_delegation"
path = "tests/test_multi_delegation.rs"

[[test]]
name = "audience_token_security"
path = "tests/exploit_audience_token.rs"

[[test]]
name = "challenge_flow_timing_attack_resistance"
path = "tests/challenge_flow_timing_attack_resistance.rs"

[[test]]
name = "engine_dispatcher_pipe_drain"
path = "tests/engine_dispatcher_pipe_drain.rs"

[[test]]
name = "artifact_gate_goldens"
path = "tests/artifact_gate_goldens.rs"

[[test]]
name = "artifact_signing_key_loading"
path = "tests/artifact_signing_key_loading.rs"

[[test]]
name = "verify_release_cli_e2e"
path = "tests/verify_release_cli_e2e.rs"

[[test]]
name = "replay_bundle_adversarial_fuzz"
path = "tests/replay_bundle_adversarial_fuzz.rs"

[[test]]
name = "replay_bundle_byte_counter_no_vec_alloc"
path = "tests/replay_bundle_byte_counter_no_vec_alloc.rs"

[[test]]
name = "fleet_transport_canonical_byte_stability"
path = "tests/fleet_transport_canonical_byte_stability.rs"

[[test]]
name = "trust_card_streaming_encoder_golden_preservation"
path = "tests/trust_card_streaming_encoder_golden_preservation.rs"

[[test]]
name = "instrumentation_zero_cost_audit"
path = "tests/instrumentation_zero_cost_audit.rs"

[[test]]
name = "spec_derived_fuzz_seeds"
path = "tests/spec_derived_fuzz_seeds.rs"
required-features = ["test-support"]

[[test]]
name = "replay_bundle_integrity_conformance"
path = "tests/replay_bundle_integrity_conformance.rs"

[[test]]
name = "replay_bundle_golden_artifacts"
path = "tests/replay_bundle_golden_artifacts.rs"

[[test]]
name = "incident_bundle_integrity_conformance"
path = "tests/incident_bundle_integrity_conformance.rs"

[[test]]
name = "incident_timeline_report"
path = "tests/incident_timeline_report.rs"

[[test]]
name = "deterministic_swarm_scenario_runner"
path = "tests/deterministic_swarm_scenario_runner.rs"

[[test]]
name = "replay_coverage_gate_conformance"
path = "tests/replay_coverage_gate_conformance.rs"

[[test]]
name = "migration_report_conformance"
path = "tests/migration_report_conformance.rs"
required-features = ["test-support"]

[[test]]
name = "migration_report_schema_golden"
path = "tests/migration_report_schema_golden.rs"

[[test]]
name = "migration_e2e_gate_artifacts"
path = "tests/migration_e2e_gate_artifacts.rs"
required-features = ["test-support"]

[[test]]
name = "policy_e2e_evidence_matrix"
path = "tests/policy_e2e_evidence_matrix.rs"
required-features = ["policy-engine"]

[[test]]
name = "policy_evidence_linkage_conformance"
path = "tests/policy_evidence_linkage_conformance.rs"
required-features = ["policy-engine"]

[[test]]
name = "bd_2igi_bayesian_diagnostics_conformance"
path = "../../tests/conformance/bd_2igi_bayesian_diagnostics_conformance.rs"
required-features = ["policy-engine"]

[[test]]
name = "control_policy_evidence_required"
path = "../../tests/conformance/control_policy_evidence_required.rs"

[[test]]
name = "runtime_cli_e2e"
path = "tests/runtime_cli_e2e.rs"

[[test]]
name = "workspace_pressure_governance_e2e"
path = "tests/workspace_pressure_governance_e2e.rs"

[[test]]
name = "cleanup_executor_integration"
path = "../../tests/cleanup_executor_integration.rs"

[[test]]
name = "runtime_lane_router_security"
path = "tests/runtime_lane_router_security.rs"

[[test]]
name = "runtime_lane_router_priority"
path = "tests/runtime_lane_router_priority.rs"

[[test]]
name = "runtime_lane_scheduler_queue_identity"
path = "tests/runtime_lane_scheduler_queue_identity.rs"

[[test]]
name = "runtime_checkpoint_envelopes_fuzz_harness"
path = "tests/runtime_checkpoint_envelopes_fuzz_harness.rs"

[[test]]
name = "storage_metamorphic"
path = "tests/storage_metamorphic.rs"

# bd-f5b04.2.2.1 + .2.2.2 (TNR keystone): proof-carrying host-effects integration
[[test]]
name = "cas_effect_receipt_conformance"
path = "tests/cas_effect_receipt_conformance.rs"

# bd-f5b04.2.1.2 (TNR keystone): lockstep-oracle compat conformance harness
[[test]]
name = "compat_lockstep_oracle_conformance"
path = "tests/compat_lockstep_oracle_conformance.rs"
required-features = ["control-plane"]

# bd-f5b04.2.1.3 (TNR keystone): compat-API parity conformance + golden + proptest
[[test]]
name = "compat_api_parity_conformance"
path = "../../tests/conformance/compat_api_parity_conformance.rs"
required-features = ["control-plane"]

[[test]]
name = "control_lane_mapping_policy"
path = "tests/control_lane_mapping_policy.rs"

[[test]]
name = "control_lane_policy"
path = "tests/control_lane_policy.rs"

[[test]]
name = "control_lane_policy_metamorphic"
path = "tests/control_lane_policy_metamorphic.rs"

[[test]]
name = "registry_cli_e2e"
path = "tests/registry_cli_e2e.rs"

[[test]]
name = "registry_cli_wire_conformance"
path = "tests/registry_cli_wire_conformance.rs"

[[test]]
name = "registry_staking_governance_conformance"
path = "tests/registry_staking_governance_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "trust_object_id_real_inputs"
path = "tests/trust_object_id_real_inputs.rs"

[[test]]
name = "trust_card_authoritative_state_real_inputs"
path = "tests/trust_card_authoritative_state_real_inputs.rs"

[[test]]
name = "trust_card_fuzz_smoke"
path = "src/supply_chain/trust_card_fuzz_test.rs"

[[test]]
name = "trust_card_wire_conformance"
path = "tests/trust_card_wire_conformance.rs"

[[test]]
name = "trust_card_schema_conformance"
path = "tests/trust_card_schema_conformance.rs"

[[test]]
name = "trust_card_conformance_runner"
path = "../../tests/conformance_runner.rs"
required-features = ["control-plane", "admin-tools"]

[[test]]
name = "canonical_serializer_real_inputs"
path = "tests/canonical_serializer_real_inputs.rs"

[[test]]
name = "canonical_serializer_conformance"
path = "tests/canonical_serializer_conformance.rs"

[[test]]
name = "encoding_proptest"
path = "tests/encoding_proptest.rs"

[[test]]
name = "claims_proptest"
path = "tests/claims_proptest.rs"
required-features = ["advanced-features"]

[[test]]
name = "conformance_proptest"
path = "tests/conformance_proptest.rs"
required-features = ["advanced-features"]

[[test]]
name = "category_shift_real_inputs"
path = "tests/category_shift_real_inputs.rs"

[[test]]
name = "claims_compiler_metamorphic"
path = "tests/claims_compiler_metamorphic.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "capability_artifact_real_inputs"
path = "tests/capability_artifact_real_inputs.rs"

[[test]]
name = "session_auth_real_lifecycle"
path = "tests/session_auth_real_lifecycle.rs"
required-features = ["test-support"]

[[test]]
name = "session_auth_key_roles"
path = "tests/session_auth_key_roles.rs"
required-features = ["test-support"]

[[test]]
name = "session_auth_jcq1z_real_service"
path = "tests/session_auth_jcq1z_real_service.rs"
required-features = ["test-support"]

[[test]]
name = "proof_generator_timeout_race"
path = "tests/proof_generator_timeout_race.rs"

[[test]]
name = "supply_chain_golden_artifacts"
path = "tests/supply_chain_golden_artifacts.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "supply_chain_trust_card_golden_bytes"
path = "tests/supply_chain_trust_card_golden_bytes.rs"

[[test]]
name = "supply_chain_manifest_replay_conformance"
path = "tests/supply_chain_manifest_replay_conformance.rs"

[[test]]
name = "project_scanner"
path = "tests/project_scanner.rs"

[[test]]
name = "module_resolution_graph"
path = "tests/module_resolution_graph.rs"

[[test]]
name = "resolution_receipt"
path = "tests/resolution_receipt.rs"

[[test]]
name = "rewrite_suggestion_engine"
path = "tests/rewrite_suggestion_engine.rs"
required-features = ["admin-tools"]

[[test]]
name = "supply_chain_registry_claims_e2e_integration"
path = "tests/supply_chain_registry_claims_e2e_integration.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "frankensqlite_adapter_conformance"
path = "tests/frankensqlite_adapter_conformance.rs"

[[test]]
name = "trust_cli_e2e"
path = "tests/trust_cli_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "telemetry_bridge_regressions"
path = "tests/telemetry_bridge_regressions.rs"
required-features = ["test-support"]

[[test]]
name = "cancellation_protocol_conformance"
path = "tests/cancellation_protocol_conformance.rs"

[[test]]
name = "cli_subcommand_goldens"
path = "tests/cli_subcommand_goldens.rs"
required-features = ["test-support"]

[[test]]
name = "doctor_close_condition_e2e"
path = "tests/doctor_close_condition_e2e.rs"
required-features = ["test-support"]

[[test]]
name = "doctor_close_condition_conformance"
path = "tests/doctor_close_condition_conformance.rs"

[[test]]
name = "doctor_json_schema_conformance"
path = "tests/doctor_json_schema_conformance.rs"

[[test]]
name = "close_condition_path_gate_regressions"
path = "tests/close_condition_path_gate_regressions.rs"

[[test]]
name = "mitigation_synthesis_length_framing"
path = "tests/mitigation_synthesis_length_framing.rs"
required-features = ["test-support"]

[[test]]
name = "cli_error_goldens"
path = "tests/cli_error_goldens.rs"
required-features = ["test-support"]

[[test]]
name = "vef_receipt_schema_conformance"
path = "tests/vef_receipt_schema_conformance.rs"

[[test]]
name = "vef_policy_constraint_compiler"
path = "../../tests/conformance/vef_policy_constraint_compiler.rs"

[[test]]
name = "vef_proof_scheduler_conformance"
path = "tests/vef_proof_scheduler_conformance.rs"

[[test]]
name = "vef_proof_generator_conformance"
path = "tests/vef_proof_generator_conformance.rs"

[[test]]
name = "vef_proof_service_fail_closed"
path = "tests/vef_proof_service_fail_closed.rs"

[[test]]
name = "vef_receipt_jcq1z_real_service"
path = "tests/vef_receipt_jcq1z_real_service.rs"

[[test]]
name = "observability_evidence_ledger_regressions"
path = "tests/observability_evidence_ledger_regressions.rs"

[[test]]
name = "evidence_ledger_chain_order_metamorphic"
path = "tests/evidence_ledger_chain_order_metamorphic.rs"

[[test]]
name = "adversarial_trust_card_forgery"
path = "tests/adversarial_trust_card_forgery.rs"

[[test]]
name = "adversarial_supply_chain_poisoning"
path = "tests/adversarial_supply_chain_poisoning.rs"
required-features = ["engine"]

[[test]]
name = "sync_durability_regression"
path = "tests/sync_durability_regression.rs"

[[test]]
name = "rollout_state_obligation"
path = "tests/rollout_state_obligation.rs"
required-features = ["test-support"]

[[test]]
name = "observability_adversarial_regressions"
path = "tests/observability_adversarial_regressions.rs"
required-features = ["test-support"]

[[test]]
name = "observability_witness_metamorphic"
path = "tests/observability_witness_metamorphic.rs"

[[test]]
name = "camouflage_detector"
path = "../../tests/security/camouflage_detector.rs"

[[test]]
name = "exfiltration_sentinel_scenarios"
path = "../../tests/security/exfiltration_sentinel_scenarios.rs"

[[test]]
name = "threshold_signature_verification"
path = "../../tests/security/threshold_signature_verification.rs"

[[test]]
name = "threshold_sig_conformance"
path = "tests/threshold_sig_conformance.rs"

[[test]]
name = "ed25519_verifier_rejects_malleable_signatures"
path = "../../tests/security/ed25519_verifier_rejects_malleable_signatures.rs"

[[test]]
name = "obligation_tracked_channels"
path = "../../tests/security/obligation_tracked_channels.rs"

[[test]]
name = "anti_amplification_harness"
path = "../../tests/security/anti_amplification_harness.rs"

[[test]]
name = "dgis_quarantine_containment"
path = "../../tests/security/dgis_quarantine_containment.rs"

[[test]]
name = "dgis_fragility_spof"
path = "../../tests/security/dgis_fragility_spof.rs"

[[test]]
name = "dgis_graph_ingestion"
path = "../../tests/security/dgis_graph_ingestion.rs"

[[test]]
name = "federation_dgis_atc_bridge_conformance"
path = "tests/federation_dgis_atc_bridge_conformance.rs"
required-features = ["advanced-features"]

# bd-cclm.1: DGIS adversarial validation suite artifacts
[[test]]
name = "dgis_adversarial_suite"
path = "../../tests/security/dgis_adversarial_suite.rs"

[[test]]
name = "bayesian_risk_quarantine"
path = "tests/bayesian_risk_quarantine.rs"
required-features = ["policy-engine"]

[[test]]
name = "fleet_quarantine_metamorphic"
path = "tests/fleet_quarantine_metamorphic.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_e2e_full"
path = "tests/fleet_quarantine_e2e_full.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_rollback_receipt"
path = "tests/fleet_quarantine_rollback_receipt.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_state_machine_conformance"
path = "tests/fleet_quarantine_state_machine_conformance.rs"
required-features = ["test-support"]

[[test]]
name = "fleet_quarantine_serde_fuzz_harness"
path = "tests/fleet_quarantine_serde_fuzz_harness.rs"
required-features = ["test-support"]

[[test]]
name = "replay_bundle_metamorphic"
path = "tests/replay_bundle_metamorphic.rs"

[[test]]
name = "time_travel_metamorphic"
path = "tests/time_travel_metamorphic.rs"

[[test]]
name = "bench_conformance_matrix"
path = "tests/bench_conformance_matrix.rs"

[[test]]
name = "bench_run_e2e"
path = "tests/bench_run_e2e.rs"

[[test]]
name = "hot_path_perf_budget_contract"
path = "tests/hot_path_perf_budget_contract.rs"
required-features = ["policy-engine"]

[[test]]
name = "canonical_serializer_metamorphic"
path = "tests/canonical_serializer_metamorphic.rs"

[[test]]
name = "control_epoch_metamorphic"
path = "tests/control_epoch_metamorphic.rs"

[[test]]
name = "control_epoch_barrier"
path = "../../tests/integration/control_epoch_barrier.rs"

[[test]]
name = "control_plane_epoch_key_conformance"
path = "tests/control_plane_epoch_key_conformance.rs"

[[test]]
name = "replay_trace_canonical_conformance"
path = "tests/replay_trace_canonical_conformance.rs"
required-features = ["extended-surfaces"]

[[test]]
name = "replay_window_metamorphic"
path = "tests/replay_window_metamorphic.rs"

[[test]]
name = "trust_card_metamorphic"
path = "tests/trust_card_metamorphic.rs"

[[test]]
name = "epoch_key_derivation_metamorphic"
path = "tests/epoch_key_derivation_metamorphic.rs"

[[test]]
name = "trust_cli_e2e_real_runtime"
path = "tests/trust_cli_e2e_real_runtime.rs"

[[test]]
name = "session_auth_real_lifecycle_structured"
path = "tests/session_auth_real_lifecycle_structured.rs"
required-features = ["test-support"]

[[test]]
name = "security_perfect_e2e_enforcement"
path = "tests/security_perfect_e2e_enforcement.rs"

[[test]]
name = "cross_substrate_vector_consumer_conformance"
path = "tests/cross_substrate_vector_consumer_conformance.rs"
required-features = ["engine"]

[[test]]
name = "compatibility_corpus_stream"
path = "tests/compatibility_corpus_stream.rs"

[[test]]
name = "compatibility_regression_dashboard"
path = "tests/compatibility_regression_dashboard.rs"

[[test]]
name = "remote_api_conformance_harness"
path = "tests/remote_api_conformance_harness.rs"
required-features = ["control-plane"]

[[test]]
name = "trust_cli_e2e_real_node_runtime"
path = "tests/trust_cli_e2e_real_node_runtime.rs"

[[test]]
name = "artifact_signing_golden_tests"
path = "tests/artifact_signing_golden_tests.rs"

[[test]]
name = "decision_receipt_json_golden"
path = "tests/decision_receipt_json_golden.rs"

[[test]]
name = "decision_receipt_round_trip_metamorphic"
path = "tests/decision_receipt_round_trip_metamorphic.rs"

[[test]]
name = "decision_receipt_crypto_trait_adoption"
path = "tests/decision_receipt_crypto_trait_adoption.rs"

[[test]]
name = "replay_bundle_crypto_trait_adoption"
path = "tests/replay_bundle_crypto_trait_adoption.rs"

[[test]]
name = "artifact_signing_metamorphic"
path = "tests/artifact_signing_metamorphic.rs"

[[test]]
name = "activation_pipeline_metamorphic"
path = "tests/activation_pipeline_metamorphic.rs"

[[test]]
name = "native_engine_compat"
path = "tests/native_engine_compat.rs"

[[test]]
name = "engine_dispatcher_profile_conformance"
path = "tests/engine_dispatcher_profile_conformance.rs"
required-features = ["engine"]

[[test]]
name = "replay_bundle_event_reorder_metamorphic"
path = "tests/replay_bundle_event_reorder_metamorphic.rs"

[[test]]
name = "proof_carrying_decode"
path = "tests/proof_carrying_decode.rs"
required-features = ["advanced-features"]

[[test]]
name = "revocation_freshness_regressions"
path = "tests/revocation_freshness_regressions.rs"

[[test]]
name = "e2e_transparency_inclusion_real_pipeline"
path = "tests/e2e_transparency_inclusion_real_pipeline.rs"

[[test]]
name = "e2e_migration_pipeline_real_cohort"
path = "tests/e2e_migration_pipeline_real_cohort.rs"

[[test]]
name = "e2e_revocation_registry_state_machine"
path = "tests/e2e_revocation_registry_state_machine.rs"

[[test]]
name = "e2e_incident_bundle_lifecycle"
path = "tests/e2e_incident_bundle_lifecycle.rs"
required-features = ["control-plane"]

[[test]]
name = "e2e_trust_card_lifecycle"
path = "tests/e2e_trust_card_lifecycle.rs"

[[test]]
name = "e2e_control_epoch_lifecycle"
path = "tests/e2e_control_epoch_lifecycle.rs"

[[test]]
name = "e2e_quarantine_registry_lifecycle"
path = "tests/e2e_quarantine_registry_lifecycle.rs"

[[test]]
name = "e2e_evidence_ledger_lifecycle"
path = "tests/e2e_evidence_ledger_lifecycle.rs"

[[test]]
name = "e2e_fork_detection_lifecycle"
path = "tests/e2e_fork_detection_lifecycle.rs"

[[test]]
name = "e2e_marker_stream_lifecycle"
path = "tests/e2e_marker_stream_lifecycle.rs"

[[test]]
name = "e2e_audience_token_chain_lifecycle"
path = "tests/e2e_audience_token_chain_lifecycle.rs"

[[test]]
name = "mcp_control_surface_contract"
path = "tests/mcp_control_surface_contract.rs"
required-features = ["control-plane"]

[[test]]
name = "e2e_mmr_proofs_lifecycle"
path = "tests/e2e_mmr_proofs_lifecycle.rs"

[[test]]
name = "mmr_proof_verification_conformance"
path = "../../tests/conformance/mmr_proof_verification_conformance.rs"
harness = false

[[test]]
name = "e2e_evidence_replay_gate_lifecycle"
path = "tests/e2e_evidence_replay_gate_lifecycle.rs"

[[test]]
name = "e2e_divergence_gate_state_machine"
path = "tests/e2e_divergence_gate_state_machine.rs"

[[test]]
name = "e2e_key_role_separation_registry"
path = "tests/e2e_key_role_separation_registry.rs"

[[test]]
name = "e2e_control_lane_scheduler_lifecycle"
path = "tests/e2e_control_lane_scheduler_lifecycle.rs"

[[test]]
name = "e2e_cancellation_protocol_lifecycle"
path = "tests/e2e_cancellation_protocol_lifecycle.rs"

[[test]]
name = "e2e_epoch_transition_barrier_lifecycle"
path = "tests/e2e_epoch_transition_barrier_lifecycle.rs"

[[test]]
name = "e2e_provenance_gate_evaluation"
path = "tests/e2e_provenance_gate_evaluation.rs"

[[test]]
name = "threshold_sig_quorum_metamorphic"
path = "tests/threshold_sig_quorum_metamorphic.rs"

[[test]]
name = "atc_partition_fallback"
path = "tests/atc_partition_fallback.rs"

[[test]]
name = "atc_sketches_integration"
path = "tests/atc_sketches_integration.rs"
required-features = ["advanced-features"]

[[test]]
name = "atc_signal_extractor_integration"
path = "tests/atc_signal_extractor_integration.rs"
required-features = ["advanced-features"]

[[test]]
name = "storage_migration_integration"
path = "../../tests/integration/storage_migration_integration.rs"
required-features = ["control-plane", "test-support"]

# bd-17ds.5.3 / bd-17ds.5.3.1: Policy -> Observability integration
[[test]]
name = "policy_observability_integration"
path = "../../tests/integration/policy_observability_integration.rs"
required-features = ["policy-engine"]

# bd-1jpc (section 10.21): unified evolution-risk scorer
[[test]]
name = "evolution_risk_scorer_integration"
path = "tests/evolution_risk_scorer_integration.rs"

# bd-2xgs.1 (section 10.21): deterministic phenotype feature extraction
[[test]]
name = "bpet_feature_extraction"
path = "../../tests/conformance/bpet_feature_extraction.rs"

# bd-ye4m.1 sub-task 4: BPET adversarial evolution integration suite
[[test]]
name = "bpet_adversarial_evolution_suite"
path = "../../tests/security/bpet_adversarial_evolution_suite.rs"

# bd-f5b04.1.4: BPET calibration benchmark artifact
[[test]]
name = "bpet_calibration_benchmark"
path = "../../tests/security/bpet_calibration_benchmark.rs"

# bd-2zo1.1: BPET to ATC temporal interop bridge
[[test]]
name = "bpet_atc_temporal_interop"
path = "../../tests/integration/bpet_atc_temporal_interop.rs"
required-features = ["advanced-features"]

# bd-kwwg.1: BPET to DGIS topology-amplified priority fusion
[[test]]
name = "bpet_dgis_priority_escalation"
path = "../../tests/integration/bpet_dgis_priority_escalation.rs"

# bd-c97l.1: DGIS topology context to trust-card style risk surfaces
[[test]]
name = "dgis_trust_card_integration"
path = "../../tests/integration/dgis_trust_card_integration.rs"

# bd-351r.1: DGIS to ATC topology interop bridge
[[test]]
name = "dgis_atc_interop"
path = "../../tests/integration/dgis_atc_interop.rs"
required-features = ["advanced-features"]

# bd-1q38.1 sub-task 4: integration test for DGIS adversarial contagion simulator
[[test]]
name = "dgis_contagion_simulator"
path = "../../tests/security/dgis_contagion_simulator.rs"

# bd-98xo5.3.1: CuckooFilter telemetry gauge integration test
[[test]]
name = "cuckoo_filter_telemetry_gauge"
path = "tests/cuckoo_filter_telemetry_gauge.rs"

# bd-if4ut: register previously orphaned N-version semantic oracle integration tests
[[test]]
name = "n_version_semantic_oracle"
path = "../../tests/oracle/n_version_semantic_oracle.rs"

# bd-9zqcq: register the bd-3u2o adjacent-substrate gate conformance test.
# One of 31 orphan tests/conformance/*.rs files discovered in r8-cc2-1138-tight;
# the remaining 30 are tracked in the same bead body for a batch follow-on.
[[test]]
name = "conformance_adjacent_substrate_gate"
path = "../../tests/conformance/adjacent_substrate_gate.rs"

# bd-papxh: wire bd-1xwz perf budget guard conformance suite (20 tests
# at tests/conformance/perf_budget_guard.rs validating the overhead gate
# decision logic at crates/franken-node/src/connector/perf_budget_guard.rs).
# In-domain (perf). Part of the bd-9zqcq orphan batch follow-on.
[[test]]
name = "conformance_perf_budget_guard"
path = "../../tests/conformance/perf_budget_guard.rs"

[[bench]]
name = "cuckoo_revocation_bench"
harness = false

[[bench]]
name = "blake3_performance_bench"
harness = false
required-features = ["blake3"]

[[bench]]
name = "replay_bundle_gzip_bench"
harness = false

[[bench]]
name = "trust_card_canonical_bench"
harness = false

[[bench]]
name = "proof_verifier_gate_bench"
harness = false

[[bench]]
name = "anti_entropy_insert_bench"
harness = false
required-features = ["advanced-features"]

[[bench]]
name = "threshold_sig_verify_bench"
harness = false

[[bench]]
name = "crypto_scheme_bench"
harness = false

[[bench]]
name = "perf_wins"
harness = false

# Round 2 of the profiling skill registered this previously-unlisted bench.
[[bench]]
name = "evidence_ledger_performance"
harness = false

# bd-98xo5.8.1 — round-3 Criterion bench covering compute_proof_bytes +
# verify_integrity. See docs/dev/profiling.md for the canonical build
# invocation (RUSTFLAGS=-C force-frame-pointers=yes ... cargo build
# --profile release-perf -p frankenengine-node --bench vef_proof_chain_bench).
[[bench]]
name = "vef_proof_chain_bench"
harness = false
required-features = ["test-support"]

# bd-98xo5.9.2 — Tree-sitter migration audit performance benchmark.
# Measures tree-sitter JavaScript parsing cost on real corpora (commander: ~2.5k LOC,
# babel: ~102k LOC). See docs/dev/profiling.md for canonical build invocation.
[[bench]]
name = "migrate_tree_sitter_bench"
harness = false

# bd-98xo5.10 — DGIS large-graph contagion_simulator::step benchmark.
# Measures fixed step loops after the T5 NodeId interning migration.
[[bench]]
name = "dgis_large_graph_bench"
harness = false
required-features = ["advanced-features"]

# bd-21fo Governor Conformance Test Suite
[[test]]
name = "bd_21fo_governor_conformance"
path = "../../tests/conformance/bd_21fo_governor_conformance.rs"
required-features = ["advanced-features"]

# bd-20uo Proof-Carrying Decode Conformance Test Suite
[[test]]
name = "bd_20uo_proof_carrying_decode_conformance"
path = "../../tests/conformance/bd_20uo_proof_carrying_decode_conformance.rs"
required-features = ["advanced-features"]

# bd-w0jq Degraded-mode Audit Conformance Test Suite
[[test]]
name = "bd_w0jq_degraded_mode_audit_conformance"
path = "../../tests/conformance/bd_w0jq_degraded_mode_audit_conformance.rs"
required-features = ["advanced-features"]

# bd-1xwz Performance Budget Guard Conformance Test Suite
[[test]]
name = "bd_1xwz_perf_budget_guard_conformance"
path = "../../tests/conformance/bd_1xwz_perf_budget_guard_conformance.rs"
required-features = ["advanced-features"]

# bd-1nfu Remote Capability Gate Conformance Test Suite
[[test]]
name = "bd_1nfu_remote_capability_gate_conformance"
path = "../../tests/conformance/bd_1nfu_remote_capability_gate_conformance.rs"
required-features = ["advanced-features"]

# bd-3a3q Guardrail Monitor Conformance Test Suite
[[test]]
name = "bd_3a3q_guardrail_monitor_conformance"
path = "../../tests/conformance/bd_3a3q_guardrail_monitor_conformance.rs"
required-features = ["advanced-features"]

# bd-tg2 Fleet Quarantine/Revocation API Conformance Test Suite
[[test]]
name = "bd_tg2_fleet_quarantine_conformance"
path = "../../tests/conformance/bd_tg2_fleet_quarantine_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_137_policy_compatibility_gate_conformance"
path = "../../tests/conformance/bd_137_policy_compatibility_gate_conformance.rs"
# test-support: the exhaustion cases use CompatGateService::force_*_id_exhaustion()
# (test-gated accessors; bd-rjc2m.4 API-drift remediation)
required-features = ["advanced-features", "test-support"]

[[test]]
name = "bd_ncwlf_hot_path_budget_smoke_conformance"
path = "../../tests/conformance/bd_ncwlf_hot_path_budget_smoke_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_2wjg_timing_instrumentation_conformance"
path = "../../tests/conformance/bd_2wjg_timing_instrumentation_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_2wz_mode_band_matrix_conformance"
path = "../../tests/conformance/bd_2wz_mode_band_matrix_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_1fp4_integrity_sweep_scheduler_conformance"
path = "../../tests/conformance/bd_1fp4_integrity_sweep_scheduler_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_2gk8_ecosystem_compliance_conformance"
path = "../../tests/conformance/bd_2gk8_ecosystem_compliance_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_3h7k_anti_entropy_reconciliation_conformance"
path = "../../tests/conformance/bd_3h7k_anti_entropy_reconciliation_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "bd_4m2n_supply_chain_extension_registry_conformance"
path = "../../tests/conformance/bd_4m2n_supply_chain_extension_registry_conformance.rs"
required-features = ["advanced-features"]

# bd-3v9p Retrievability Gate Conformance Test Suite
[[test]]
name = "bd_3v9p_retrievability_gate_conformance"
path = "../../tests/conformance/bd_3v9p_retrievability_gate_conformance.rs"
required-features = ["advanced-features"]

# bd-5k7w Runtime Resource Governor Conformance Test Suite
[[test]]
name = "bd_5k7w_runtime_resource_governor_conformance"
path = "../../tests/conformance/bd_5k7w_runtime_resource_governor_conformance.rs"
required-features = ["advanced-features"]

# bd-7s2p Connector Method Validator Conformance Test Suite
[[test]]
name = "bd_7s2p_connector_method_validator_conformance"
path = "../../tests/conformance/bd_7s2p_connector_method_validator_conformance.rs"
required-features = ["advanced-features"]

[[test]]
name = "ambient_authority_gate"
path = "tests/ambient_authority_gate.rs"
