[package]
name = "frankenengine-verifier-sdk"
version.workspace = true
edition.workspace = true
description = "Verifier SDK for replaying bundles, checking canonical hashes, and verifying Ed25519 signatures"
license.workspace = true

[features]
fuzz = ["arbitrary"]
test-support = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
ed25519-dalek = "2.1.1"
sha2 = "0.11.0"
hex = "0.4.3"
subtle = "2.6.1"
chrono = { version = "0.4.40", default-features = false, features = ["alloc", "clock", "std"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
arbitrary = { version = "1.3", optional = true, features = ["derive"] }

[dev-dependencies]
frankenengine-node = { path = "../../crates/franken-node", default-features = false }
